@@ -114,6 +114,7 @@ Unreleased -
     - Add static in vdelivermail.c
     - Clean up calling maildrop in vdelivermail.c
     - fix ,S= tag in case spamassassin changed the file size
+    - fix those vfork() instances that do more than exec*()
 
   - Merge patch by Jory Pratt :
     - patched for lazy binding for quality assurance
